Changes since KSpread 2.2
=========================

Features
--------
Manual page breaks.

Enhancements
------------
Display status bar messages instead of notifications (in a few cases).

Bug Fixes
---------
Fix: Unhiding a sheet depends on the map protection, not on the sheet's.
Fix the context menu choice of selected text values. Do not crash/freeze on selection changes.
Initially disable the apply and cancel button in the cell tool option widget.
Fix the dependency calculation after region changes and after sheet additions/removals.
Fix text/background/border color actions by using KoColorPopupAction (if pigment is built).
Fix map/sheet protection action.
208868: Fix action triggering on selection changes, which resulted in style changes.
Fix cell removal by shifting cells up.
Fix column/row insertion/removal undo/redo for non-contiguous selections.
Fix special paste operations (!= OverWrite) do not undo properly.
Fix undo of pasting styles.
Fix undo of pasting comments.
Fix crash in cell insertion/removal dialog.
Fix the cell shift command and its cell repainting for non-contiguous selections.
Properly update the canvas on changing sheets.
Fix right-to-left layouts (except for shapes).
Prevent the canvas from staying blank at startup.
Fix the reference size grip handling.
Accelerate startup after opening a file of a foreign format.
Reactivate the 'Insert series..' action.
Fix repainting after sheet protection changes.
Fix the border painting of the column/row headers and the select all button.
Fix the right mouse button interaction for the column/row headers.
Allow to select multiple cells after using a reference selection widget (e.g. in goal seek dialog).
Fix the goal seek dialog/command.
Change to the desired sheet, if an address is entered in the location combobox.
Do not leave reference selection mode after selecting a cell (range).
Fix the position of the function auto-completion popup.